Fixed hamburger issue and header spacing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
 }
 
 .header-solid{
-    background-color: gray;
+    background-color: gray (124, 46, 46);
 }
 
 #logo-container {
@@ -122,7 +122,7 @@ header{
     display: none;
     position: fixed;
     z-index: 400;
-    width: 100%;
+    width: 1-0%;
     height: 100%;
     z-index: 98;
     padding-top: 100px;
